kubernetes/main/apps/observability/crucix/app/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app crucix-ingress
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: crucix.${SECRET_EXTERNAL_DOMAIN}
    nginx.ingress.kubernetes.io/auth-url: |-
       http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
       https://auth.${SECRET_EXTERNAL_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme%3A%2F%2F$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
       Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: external
  rules:
  - host: crucix.${SECRET_EXTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: crucix
            port:
              number: 3117
        path: /
        pathType: Prefix
